--- a/composer.json
+++ b/composer.json
@@ -60,12 +60,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "AppTest\\": "test/AppTest/"
+            "Api\\": "src/Api/src/",
+            "Auth\\": "src/Auth/src/",
+            "Admin\\": "src/Admin/src/"
         }
     },
     "scripts": {
